# RaceCapture-Pro_firmware

./: .cdtproject  .cproject  .gitignore  .gitmodules  .project  AT91SAM7S256-ROM.ld  AT91SAM7S64-ROM.ld  CHANGELOG  CODING_STANDARD.md  CONTRIBUTING.md  CREDITS  FreeRTOSConfig.h  HOW_TO_FLASH.txt  Makefile  README.md  README_RELEASE_NOTES.txt  RELEASE_NOTES.TXT  RaceCapturePro-1.1.10.elf  Vagrantfile  analogchannelsview.kv  analogchannelsview.py  app_info.h  apply_style.sh  baseCommands.c  baseCommands.h  blinker.c  blinker.lst  bluetoothconfigview.kv  bluetoothconfigview.py  boundedlabel.kv  boundedlabel.py  buildmacinstall.sh  buildwininstall.bat  canchannelsview.py  canconfigview.kv  canconfigview.py  channelnameselectorview.kv  channelnameselectorview.py  channelnamespinner.py  channels.py  (+86 more)
.dep/: USB-CDC.o.d  USBIsr.o.d  blinker.o.d  led_debug.o.d  lib_AT91SAM7S256.o.d  list.o.d  main.o.d  portISR.o.d  queue.o.d  usb_comm.o.d
RCT/: Makefile  capabilities.h
SAM7s_base/: AT91SAM7S256-ROM.ld  FreeRTOSConfig.h  Makefile  README.openocd  capabilities.h  flash.cfg  gdb.cfg  gdb_olimex.gdb  openocd.cfg  openocd_olimex_sam7s_flash.cfg  openocd_olimex_sam7s_gdb.cfg  sam7s_flash.cfg  sam7s_gdb.cfg  startup_SAM7S.S  system_info.h
accelerometer/: accel.brd  accel.sch  accelerometer.c  accelerometer.h
analyzer/: .cdtbuild  .cdtproject  .cproject  .project  Thumbs.db  compact1.glf  linux.cdtbuild  linux.cdtproject  linux.project  windows.cdtbuild  windows.project
controller/: logger.b#1  logger.b#2  logger.b#3  logger.b#4  logger.b#5  logger.b#6  logger.b#7  logger.b#8  logger.b#9  logger.brd  logger.s#1  logger.s#2  logger.s#3  logger.s#4  logger.s#5  logger.s#6  logger.s#7  logger.s#8  (+5 more)
firmware/test/: Makefile  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  loggerData_test.h  numtoa_test.cpp  numtoa_test.h
(+2922 files in other folders)
